force-app/main/default/objects/S125_Discrepancy__c/S125_Discrepancy__c.object-meta.xml
<CustomObject>
    <description>Used with Reference S125 Onboarding object</description>
    <label>S125 Discrepancy</label>
    <nameField>
        <displayFormat>S125 Discrepancy-{0000}</displayFormat>
        <label>S125 Discrepancy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S125 Discrepancies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>