force-app/main/default/objects/S125_Discrepancy__c/fields/Discrepancy_Comment__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Discrepancy Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>