force-app/main/default/objects/S125_Discrepancy__c/fields/PEO_Onboarding_Specialist__c.field-meta.xml
<CustomField>
    <fullName>PEO_Onboarding_Specialist__c</fullName>
    <formula>/*Reference_S125_Onboarding__r.National_Sales_Consultant__c*/

 Reference_S125_Onboarding__r.National_Sales_Consultant__r.FirstName +&quot; &quot;+ Reference_S125_Onboarding__r.National_Sales_Consultant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PEO Onboarding Specialist</label>
    <type>Text</type>
</CustomField>