force-app/main/default/objects/S125_Discrepancy__c/validationRules/Limit_who_can_check_Send_Chatter_box.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_who_can_check_Send_Chatter_box</fullName>
    <active>true</active>
    <description>case #25759356 - limit edit of Send Chatter Notification to specific roles</description>
    <errorConditionFormula>OR (ISCHANGED( Send_Chatter_Notification__c ), 
ISNEW() &amp;&amp; Send_Chatter_Notification__c = True ) 
&amp;&amp; $UserRole.Name != &apos;HRS 4S Sales Support Rep&apos; 
&amp;&amp; $UserRole.Name != &apos;HRS 4S Director&apos; 
&amp;&amp; NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;))</errorConditionFormula>
    <errorDisplayField>Send_Chatter_Notification__c</errorDisplayField>
    <errorMessage>You do not have permission to edit this field.</errorMessage>
</ValidationRule>