force-app/main/default/objects/S125_Discrepancy__c/validationRules/QSEHRA_Sales_Rep_Email_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>QSEHRA_Sales_Rep_Email_is_required</fullName>
    <active>true</active>
    <description>QSEHRA Sales Rep Email is required for Product Type-QSEHRA Phase 1</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(Product_Type__c, &quot;QSEHRA Phase 1&quot;), 
ISPICKVAL(Product_Type__c, &quot;QSEHRA Phase 1&quot;),
ISPICKVAL(Product_Type__c, &quot;FSA PBA&quot;),
ISPICKVAL(Product_Type__c, &quot;FSA PBA CONV&quot;),
ISPICKVAL(Product_Type__c, &quot;FSA PBA Phase 1&quot;),
ISPICKVAL(Product_Type__c, &quot;HSA&quot;)),ISBLANK(QSEHRA_Sales_Rep_Email__c))</errorConditionFormula>
    <errorDisplayField>QSEHRA_Sales_Rep_Email__c</errorDisplayField>
    <errorMessage>QSEHRA Sales Rep Email is required for Product Type-QSEHRA Phase 1</errorMessage>
</ValidationRule>