force-app/main/default/objects/S125_Discrepancy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Reference_S125_Onboarding__c</columns>
    <columns>Case_Created__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Discrepancy_Resolution_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>District__c</field>
        <operation>equals</operation>
        <value>033,052,077,018</value>
    </filters>
    <filters>
        <field>PEO_Onboarding_Specialist__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>